--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,10 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
+        <jdbc.version>5.1.36</jdbc.version>
+        <mybatis.version>2.0.2</mybatis.version>
+        <druid.version>1.1.9</druid.version>
+        <lombok.version>1.16.14</lombok.version>
     </properties>
 
     <dependencies>
@@ -43,28 +47,33 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.11</version>
+            <version>${jdbc.version}</version>
         </dependency>
 
         <!-- mybatis 官方地址： http://www.mybatis.org/spring-boot-starter/mybatis-spring-boot-autoconfigure/-->
         <dependency>
-            <groupId>org.mybatis.spring.boot</groupId>
-            <artifactId>mybatis-spring-boot-starter</artifactId>
-            <version>1.3.2</version>
+            <groupId>tk.mybatis</groupId>
+            <artifactId>mapper-spring-boot-starter</artifactId>
+            <version>${mybatis.version}</version>
         </dependency>
 
         <!-- druid数据连接池 地址:  https://github.com/alibaba/druid/tree/master/druid-spring-boot-starter-->
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
-            <version>1.1.9</version>
+            <version>${druid.version}</version>
         </dependency>
 
         <!-- lombok idea需要下载插件 方便get set -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.16.14</version>
+            <version>${lombok.version}</version>
+        </dependency>
+
+        <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-securit</artifactId>
         </dependency>
     </dependencies>
 
