--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,6 +1,6 @@
 # 项目名称、版本、版权年份
 student:
-  name: RuoYi
+  name: student
   version: 2.1.0
   copyrightYear: 2018
   profile: D:/profile/
@@ -106,3 +106,9 @@ user:
   password:
     #密码错误{maxRetryCount}次锁定10分钟
     maxRetryCount: 5
+#日志配置
+logging:
+  level:
+    com.student: debug
+    org.springframework: WARN
+    org.spring.springboot.dao: debug
