--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -112,3 +112,13 @@ logging:
     com.student: debug
     org.springframework: WARN
     org.spring.springboot.dao: debug
+# 代码生成
+gen:
+  # 作者
+  author: dargon
+  # 默认生成包路径 module 需改成自己的模块名称 如 system monitor tool
+  packageName: com.student.project.module
+  # 自动去除表前缀，默认是true
+  autoRemovePre: true
+  # 表前缀(类名不会包含表前缀)
+  tablePrefix: sys_
