--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -6,10 +6,10 @@ student:
   profile: D:/profile/
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/studen_mybatis?useSSL=false&serverTimezone=UTC&useUnicode=true&characterEncoding=UTF-8
+    url: jdbc:mysql://localhost:3306/studen_mybatis?useSSL=false&serverTimezone=UTC
     username: root
-    password: Liaoxiaolong@123
-    driverClassName: com.mysql.jdbc.Driver
+    password: root
+    driverClassName: com.mysql.cj.jdbc.Driver
     type: com.alibaba.druid.pool.DruidDataSource
     # 初始化大小，最小，最大
     initialSize: 1
@@ -57,7 +57,7 @@ spring:
     restart:
       enabled: true
 server:
-  port: 80
+  port: 8080
 # MyBatis
 mybatis:
     # 搜索指定包别名
